fixed overlapping navbar

--- a/main.css
+++ b/main.css
@@ -49,8 +49,9 @@ div {
     text-decoration: underline;
 }
 .navbar {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
+    /* padding-top: 0 !important;
+    padding-bottom: 0 !important; */
+    
     
 }
 nav {
